--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <DOCTYPE! html public>
 <html lang="en">
    <head>
-      <title></title>
+      <title>Errand Girl Boca: Giving you back your day, one errand at a time.</title>
       <meta charset="UTF-8">
+      <meta name="description" content="A service that specializes in running errands of various sorts, including ">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
       <link rel="stylesheet" type="text/css" href="css/css.css">
    </head>
    <body ng-app="ErrandGirlBoca">
