--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
    <head>
       <title>Errand Girl Boca: Giving you back your day, one errand at a time.</title>
       <meta charset="UTF-8">
-      <meta name="description" content="A service that specializes in running errands of various sorts, including ">
+      <meta name="description" content="A service that specializes in running errands of various sorts, including grocery shopping, dry-cleaning, back-to-school preparation, transport to and from the airport and more! ">
+      <meta property="og:image" content="img/mainlogo.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
@@ -12,7 +13,7 @@
    </head>
    <body ng-app="ErrandGirlBoca" id="startchange">
      <navbar></navbar>
-     <ui-view></ui-view>
+     <ui-view autoscroll="true"></ui-view>
      <footer-bottom></footer-bottom>
    </body>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -30,7 +31,7 @@
 <!-- Directives -->
 <script src="js/directives/directives.js"></script>
 <!--Controllers-->
-  <script src="js/controllers/main.js"></script><!--main Controller-->
+  <script src="js/controllers/controllers.js"></script><!--main Controller-->
 <!-- Services -->
 
    </html>
@@ -53,5 +54,13 @@
         }
       })
     }
+
+    $("#learn-more").click(function() {
+      $('html, body').animate({
+          scrollTop: $("#showcase").offset().top
+      }, 2000);
   });
+  });
+
+
 </script>
