Added mailing, styles

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,1 +1,79 @@
-This is contact
+<section class="wave-background contact" id="top">
+    <div class="container p70">
+
+        <div class="row">
+            <div class="col-md-12 header animated fadeIn">
+                <h1>Get In Touch</h1>
+                <p>Let us know how we can help you</p>
+            </div>
+        </div>
+        <div class="row methods">
+            <div class="col-md-4">
+                <div class="method">
+                    <div class="icon-wrapper">
+                        <img src="img/phone.svg">
+                    </div>
+                    <h2>Call Us</h2>
+                    <a href="tel:954-567-1654"> <span>(954)-567-1654</span> </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="method">
+                    <div class="icon-wrapper">
+                        <img src="img/keyboard.svg">
+                    </div>
+                    <h2>Send Us a Message</h2>
+                    <p>Use the contact form below</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="method">
+                    <div class="icon-wrapper">
+                        <img src="img/email.svg">
+                    </div>
+                    <h2>E-mail Us</h2>
+                    <a href="mailto:ll4270@aol.com"><span class="hidden-xs">ll427@aol.com</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+<section class="showcase services" id="showcase">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="wrapper animated fadeIn">
+                    <div class="service-container">
+                        <div class="row">
+                          <div class="cssFade" ng-show="contactForm.$submitted && contactForm.$valid" id="contactFinish" style="text-align:center">
+                            <h3>Your Mail Has Been Sent</h3>
+                            <p>We'll be in touch with you shortly!</p>
+                          </div>
+                          <form class="form-group" ng-submit="contactCtrl.processForm()" ng-hide="contactForm.$submitted && contactForm.$valid" name="contactForm" id="contactForm" novalidate>
+                          <label for="name">Name</label>
+                          <input ng-model="contactCtrl.formData.name" class="form-control" type="name" name="name" id="name" required>
+                          <label for="email">E-mail</label>
+                          <input ng-model="contactCtrl.formData.email"class="form-control" type="email" name="email" id="email">
+                          <label for="phone">Contact Number</label>
+                          <input ng-model="contactCtrl.formData.phone"class="form-control" type="number"name="phone" id="phone" ng-minlength="9" required>
+                          <span class="help-block" ng-show="errorPhone">{{ errorPhone }}</span>
+                          <label for="text">Tell Us About Your Needs</label>
+                          <textarea ng-model="contactCtrl.formData.text"class="form-control" type="Text" name="text" id="text" style="height:100px" required></textarea>
+                          <button ng-disabled="contactForm.$invalid" class="btn learn-more" id="moreButton" style="width:100%" type="submit" value="Submit">Send</button>
+                          <!--if Contact Form is Valid-->
+                          <span class="" ng-show="contactForm.$submitted && contactForm.$invalid">
+                            <p style="color:red;">Please fill in your information.</p>
+                          </span>
+                        </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    </div>
+</section>
