--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
           $(".navbar-fixed-top").css('background-color', '#f6f6f6');
           $(".navbar-fixed-top li a").css('color','#484848');
           $("#logo").attr('src','img/logosmall000.svg');
+          $("#button-logo").attr('src','img/logosmall000.svg');
         }else{
-          $(".navbar-fixed-top").css('background-color', 'transparent');
+          $(".navbar-fixed-top").css('background-color', '#E55A81');
           $(".navbar-fixed-top li a").css('color','#ffffff');
           $("#logo").attr('src','img/logosmall.svg');
+          $("#button-logo").attr('src','img/logosmall.svg');
         }
       })
     }
