changed color scheme, changed icons, changed logo, added faq, changed services listing, changed routing to ngRoute

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -14,7 +14,7 @@
                         <img src="img/phone.svg">
                     </div>
                     <h2>Call Us</h2>
-                    <a href="tel:954-567-1654"> <span>(954)-567-1654</span> </a>
+                    <a href="tel:954-557-1654"> <span>(954)-557-1654</span> </a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -32,7 +32,7 @@
                         <img src="img/email.svg">
                     </div>
                     <h2>E-mail Us</h2>
-                    <a href="mailto:ll4270@aol.com"><span class="hidden-xs">ll427@aol.com</span></a>
+                    <a href="mailto:lynn@errandgirlboca.com"><span class="hidden-xs">lynn@errandgirlboca.com</span></a>
                 </div>
             </div>
         </div>
