--- a/services/services.html
+++ b/services/services.html
@@ -14,10 +14,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="wrapper animated fadeInUp">
-                  <div class="service-bar hidden-xs"></div>
+                <div class="wrapper animated fadeIn " style="">
+                    <div class="service-bar hidden-xs"></div>
                     <div class="service-container">
-                        <div class="row">
+                        <div class="row" href="#general" id="general">
                             <div class="col-md-12 img">
                                 <img src="img/bag.svg">
                                 <h1>General Errands</h1>
@@ -60,10 +60,10 @@
 
 
             <div class="col-md-12">
-                <div class="wrapper animated fadeInUp" style="animation-delay:0.2s">
-                                    <div class="service-bar hidden-xs"></div>
+                <div class="wrapper animated fadeIn " style="s">
+                    <div class="service-bar hidden-xs"></div>
                     <div class="service-container">
-                        <div class="row">
+                        <div href="#home" class="row" id="home">
                             <div class="col-md-12 img">
                                 <img src="img/dog.svg">
                                 <h1>Household Management</h1>
@@ -73,25 +73,31 @@
                             <div class="col-md-4 col-md-offset-2">
                                 <ul>
                                     <li>
-                                        <p>Waiting for Deliveries or Service Personnel</p>
+                                        <p>Waiting for deliveries and service personnel</p>
                                     </li>
                                     <li>
-                                        <p>Schedule Home Repairs and Maintenance</p>
+                                        <p>Schedule home repairs and maintenance</p>
                                     </li>
-
+                                    <li>
+                                        <p>Moving - packing and unpacking</p>
+                                    </li>
 
                                 </ul>
                             </div>
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <p>Pet Care – dog walking</p>
+                                        <p>Pet care – dog walking</p>
                                     </li>
                                     <li>
-                                        <p>Vacation Planning</p>
+                                        <p>Vacation-planning</p>
                                     </li>
                                     <li>
-                                        <p>Party Planning &amp; Hosting</p>
+                                        <p>Party planning and small events</p>
+                                    </li>
+
+                                    <li>
+                                        <p>Home organization</p>
                                     </li>
                                 </ul>
                             </div>
@@ -100,10 +106,10 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <div class="wrapper animated fadeInUp" style="animation-delay:0.2s">
-                                    <div class="service-bar hidden-xs"></div>
+                <div class="wrapper animated fadeIn " style="s">
+                    <div class="service-bar hidden-xs"></div>
                     <div class="service-container">
-                        <div class="row">
+                        <div href="#parents" class="row" id="parents">
                             <div class="col-md-12 img">
                                 <img src="img/pencil.svg">
                                 <h1>Busy Parents</h1>
@@ -118,14 +124,16 @@
                                     <li>
                                         <p>Party planning home/school</p>
                                     </li>
-
+                                    <li>
+                                        <p>New mom assistance</p>
+                                    </li>
 
                                 </ul>
                             </div>
                             <div class="col-md-4">
                                 <ul>
                                     <li>
-                                        <p>Game Day Snacks Delivered to the Field</p>
+                                        <p>Game day snack delivered to the field</p>
                                     </li>
                                     <li>
                                         <p>Retrieve forgotten lunch/homework</p>
@@ -138,10 +146,10 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <div class="wrapper animated fadeInUp" style="animation-delay:0.2s">
-                                    <div class="service-bar hidden-xs"></div>
+                <div class="wrapper animated fadeIn " style="s">
+                    <div class="service-bar hidden-xs"></div>
                     <div class="service-container">
-                        <div class="row">
+                        <div href="#away" class="row" id="away">
                             <div class="col-md-12 img">
                                 <img src="img/flower.svg">
                                 <h1>Snowbirds and Vacationers</h1>
@@ -176,10 +184,10 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <div class="wrapper animated fadeInUp" style="animation-delay:0.2s">
-                                    <div class="service-bar hidden-xs"></div>
+                <div class="wrapper animated fadeIn" style="s">
+                    <div class="service-bar hidden-xs"></div>
                     <div class="service-container">
-                        <div class="row">
+                        <div href="#business" class="row" id="business">
                             <div class="col-md-12 img">
                                 <img src="img/plane.svg">
                                 <h1>Business Services</h1>
@@ -194,7 +202,9 @@
                                     <li>
                                         <p>Arrange Business Travel</p>
                                     </li>
-
+                                    <li>
+                                        <p>Meeting Planning</p>
+                                    </li>
 
                                 </ul>
                             </div>
@@ -206,9 +216,7 @@
                                     <li>
                                         <p>Employee Gifts</p>
                                     </li>
-                                    <li>
-                                        <p>Meeting Planning</p>
-                                    </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -236,51 +244,51 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="highlight-rate">
-                  <div class="highlight-rate-body">
-                    <img src="img/clock.svg">
-                    <p>General services are available for $25.00 per hour. Thereafter, charges are incurred in 15 minute increments. Cost of purchases not included in hourly rate.</p>
-                    <p>One hour minimum.</p>
-                  </div>
-                  <div class="rate-foot">
+                    <div class="highlight-rate-body">
+                        <img src="img/clock.svg">
+                        <p>General services are available for $25.00 per hour. Thereafter, charges are incurred in 15 minute increments. Cost of purchases not included in hourly rate.</p>
+                        <p>One hour minimum.</p>
+                    </div>
+                    <div class="rate-foot">
 
-                  </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="highlight-rate">
-                  <div class="highlight-rate-body">
-                    <img src="img/car.svg">
-                    <p>Your first 10 miles are included. Additional mileage will be charged at a rate of $.50 per mile.</p>
+                    <div class="highlight-rate-body">
+                        <img src="img/car.svg">
+                        <p>Your first 10 miles are included. Additional mileage will be charged at a rate of $.50 per mile.</p>
 
-                    <p>Transportation services are charged an auotmatic $.50 per mile plus any applicable tolls.</p>
-                  </div>
-                  <div class="rate-foot">
+                        <p>Transportation services are charged an auotmatic $.50 per mile plus any applicable tolls.</p>
+                    </div>
+                    <div class="rate-foot">
 
-                  </div>
+                    </div>
                 </div>
 
             </div>
             <div class="col-md-4">
                 <div class="highlight-rate">
-                  <div class="highlight-rate-body">
-                    <img src="img/card.svg">
-                    <p><strong>We accept:</strong></p>
-                    <ul>
-                        <li>
-                            <p>All Major Credit Cards</p>
-                        </li>
-                        <li>
-                            <p>Cash</p>
-                        </li>
-                        <li>
-                            <p>PayPal</p>
-                        </li>
+                    <div class="highlight-rate-body">
+                        <img src="img/card.svg">
+                        <p><strong>We accept:</strong></p>
+                        <ul>
+                            <li>
+                                <p>All Major Credit Cards</p>
+                            </li>
+                            <li>
+                                <p>Cash</p>
+                            </li>
+                            <li>
+                                <p>PayPal</p>
+                            </li>
 
-                    </ul>
-                  </div>
-                  <div class="rate-foot">
+                        </ul>
+                    </div>
+                    <div class="rate-foot">
 
-                  </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -293,11 +301,11 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-              <div class="button-wrapper">
-  <a  href="#/contact">
-                    <button class="btn btn-large learn-more">Reach Out To Us!</button>
-                </a>
-              </div>
+                <div class="button-wrapper">
+                    <a ng-href="#/contact">
+                        <button class="btn btn-large learn-more">Reach Out To Us!</button>
+                    </a>
+                </div>
             </div>
         </div>
 
