--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
       <link rel="stylesheet" type="text/css" href="css/css.css">
    </head>
-   <body ng-app="ErrandGirlBoca" id="startchange">
+   <body ng-app="ErrandGirlBoca" id="startchange" ng-cloak>
      <navbar></navbar>
-     <ui-view autoscroll="true"></ui-view>
+     <ng-view autoscroll="true"></ng-view>
      <footer-bottom></footer-bottom>
    </body>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
    <script src="js/vendor/angular.min.js"></script>
-   <script src="js/vendor/angular-ui-router.min.js"></script>
+   <script src="js/vendor/angular-route.min.js"></script>
      <script src="js/vendor/ui-bootstrap.min.js"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
    <script src="js/vendor/angular-animate.min.js"></script>
@@ -49,7 +49,7 @@
           $("#logo").attr('src','img/logosmall000.svg');
           $("#button-logo").attr('src','img/logosmall000.svg');
         }else{
-          $(".navbar-fixed-top").css('background-color', '#E55A81');
+          $(".navbar-fixed-top").css('background-color', '#e044a8');
           $(".navbar-fixed-top li a").css('color','#ffffff');
           $("#logo").attr('src','img/logosmall.svg');
           $("#button-logo").attr('src','img/logosmall.svg');
