Added html5 mode, fixed css glitches

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -19,8 +19,7 @@
                     <div class="faq-container">
 
                         <h3> What are your hours?</h3>
-                        <p> We do require a 48 hour notice but understand that life can be unpredictable.
-                        We will do our best to accommodate last minute and urgent requests.</p>
+                        <p> We do require a 48 hour notice but understand that life can be unpredictable. We will do our best to accommodate last minute and urgent requests.</p>
 
                     </div>
                 </div>
@@ -33,7 +32,7 @@
                     <div class="faq-container">
 
                         <h3> How much notice do you need to schedule a service?</h3>
-                        <p> Our normal business hours are Monday through Friday from 8:00a.m. -5:00 p.m., nights and weekends available upon request.</p>
+                        <p> Our normal business hours are Monday through Friday from 8:00a.m. - 5:00 p.m., nights and weekends available upon request.</p>
 
                     </div>
                 </div>
@@ -46,8 +45,7 @@
                     <div class="faq-container">
 
                         <h3> What if the service I need is not listed on this website?</h3>
-                        <p>  We offer a wide range of services. If there is something specific you require please contact us, we would love to hear
-                               from you. </p>
+                        <p> We offer a wide range of services. If there is something specific you require please contact us, we would love to hear from you. </p>
 
                     </div>
                 </div>
@@ -75,22 +73,7 @@
                     <div class="faq-container">
 
                         <h3>How do I get started?</h3>
-                        <p>Call us at 954-557- 1654 or e-mail
-                        us anytime at lynn@errandgirlboca.com.</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <div class="wrapper animated fadeInUp" style="animation-delay:0.5s">
-                    <div class="service-bar hidden-xs"></div>
-                    <div class="faq-container">
-
-                        <h3> What are your hours?</h3>
-                        <p> Our normal business hours are Monday through Friday from 8:00a.m. -5:00 p.m., nights and weekends available upon request.</p>
+                        <p>Call us at 954-557-1654 or e-mail us anytime at lynn@errandgirlboca.com.</p>
 
                     </div>
                 </div>
