--- a/services/services.html
+++ b/services/services.html
@@ -1,5 +1,5 @@
 <section class="wave-background services" id="top">
-    <div class="container p70">
+    <div class="container-fluid p70">
 
         <div class="row">
             <div class="col-md-12 header animated fadeIn">
@@ -302,7 +302,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="button-wrapper">
-                    <a ng-href="#/contact">
+                    <a href="contact">
                         <button class="btn btn-large learn-more">Reach Out To Us!</button>
                     </a>
                 </div>
