--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
       <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="css/vendor/animate.css">
       <link rel="stylesheet" type="text/css" href="css/css.css">
+      <base href="/ErrandGirlBoca">
    </head>
    <body ng-app="ErrandGirlBoca" id="startchange" ng-cloak>
      <navbar></navbar>
      <ng-view autoscroll="true"></ng-view>
      <footer-bottom></footer-bottom>
    </body>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-   <script src="js/vendor/angular.min.js"></script>
-   <script src="js/vendor/angular-route.min.js"></script>
-     <script src="js/vendor/ui-bootstrap.min.js"></script>
-  <script src="js/vendor/bootstrap.min.js"></script>
-   <script src="js/vendor/angular-animate.min.js"></script>
-   <script src="js/vendor/gsap/jquery.gsap.min.js"></script>
-   <script src="js/vendor/gsap/TimelineMax.min.js"></script>
-   <script src="js/vendor/gsap/TweenMax.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="js/vendor/angular.min.js"></script>
+    <script src="js/vendor/angular-route.min.js"></script>
+    <script src="js/vendor/ui-bootstrap.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/angular-animate.min.js"></script>
+    <script src="js/vendor/gsap/jquery.gsap.min.js"></script>
+    <script src="js/vendor/gsap/TimelineMax.min.js"></script>
+    <script src="js/vendor/gsap/TweenMax.min.js"></script>
 
 <!-- App -->
   <script src="js/app.js"></script>
